# dubchain

./: .gitignore  Dockerfile  LICENSE  README.md  chaos_mode.py  interactive_node.py  pyproject.toml  quick_demo.py  requirements.txt
.github/workflows/: performance-regression.yml
docs/: README.md
docs/api/: README.md  block.md  blockchain.md  channel.md  channel_protocol.md  consensus.md  consensus_types.md  core.md  execution_engine.md  gas_meter.md  hashing.md  merkle.md  opcodes.md  pbft.md  peer.md  proof_of_stake.md  proposal.md  protocol.md  shard_manager.md  shard_types.md  signatures.md  transaction.md
docs/architecture/: README.md  scientific-overview.md
docs/concepts/: blockchain.md  consensus.md  cryptography.md  smart-contracts.md
docs/configuration/: README.md
docs/consensus/: NEW_CONSENSUS_MECHANISMS.md
docs/contributing/: README.md
docs/features/: bridge.md  networking.md  sharding.md  vm.md
docs/governance/: README.md
docs/installation/: README.md
docs/modules/: README.md
docs/performance/: BENCHMARKING.md  OPTIMIZATION_GUIDE.md  PERFORMANCE_BUDGETS.md  PERFORMANCE_OPTIMIZATION_COMPLETE.md  PERFORMANCE_OPTIMIZATION_SUMMARY.md  README.md
docs/quickstart/: README.md
docs/research/: README.md  consensus-algorithms.md
docs/state_channels/: README.md
docs/style/: README.md
docs/testing/: README.md
docs/tutorials/: advanced-consensus.md
examples/: advanced_consensus_demo.py  advanced_vm_demo.py  basic_blockchain_demo.py  cross_chain_bridge_demo.py  cuda_acceleration_demo.py  enhanced_sharding_demo.py  governance_demo.py  gpu_acceleration_demo.py  hardware_acceleration_demo.py  multi_chain_bridge_demo.py  optimized_gpu_demo.py  p2p_networking_demo.py  sharding_demo.py  state_channels_demo.py  wallet_demo.py
scripts/: chaos_mode.py  cleanup_results.py  comprehensive_blockchain_test.py  demo_performance_optimization.py  generate_optimization_plan.py  integration_comprehensive_test.py  master_test_runner.py  performance_regression_test.py  performance_stress_test.py  run_baseline_profiling.py  run_consensus_tests.py  security_adversarial_test.py
src/dubchain/: __init__.py
tests/: test_governance_runner.py
tests/adversarial/: test_consensus_adversarial.py  test_governance_adversarial.py  test_state_channels_adversarial.py  test_zkp_adversarial.py
tests/benchmark/: test_consensus_benchmark.py  test_enhanced_sharding_benchmark.py  test_state_channels_performance.py  test_zkp_benchmark.py
tests/bridge/: README.md  test_bridge_integration.py  test_bridge_penetration.py  test_bridge_security.py  test_config.py
tests/cuda/: test_cuda_comprehensive_integration.py  test_cuda_consensus_integration.py  test_cuda_crypto_integration.py  test_cuda_integration.py  test_cuda_vm_integration.py
tests/fuzz/: test_governance_fuzz.py  test_state_channels_fuzz.py
tests/hardware/: README.md  test_config.py  test_hardware_acceleration.py  test_hardware_performance.py
tests/integration/: test_additional_integration.py  test_enhanced_sharding_integration.py  test_governance_integration.py  test_simple_integration.py  test_state_channels_integration.py  test_zkp_integration.py
tests/ml/: README.md  test_config.py  test_ml_modules.py  test_ml_performance.py
tests/performance/: test_optimized_modules.py  test_performance_optimization.py
tests/property/: test_consensus_property.py  test_enhanced_sharding_property.py  test_enhanced_sharding_property_simple.py  test_governance_property.py  test_state_channels_property.py  test_zkp_property.py
tests/unit/: test_blockchain_core.py  test_bridge_atomic_swap.py  test_bridge_cross_chain_messaging.py  test_bridge_manager.py  test_bridge_security.py  test_bridge_types.py  test_bridge_universal_assets.py  test_cache_analytics.py  test_cache_core.py  test_cache_distributed.py  test_cache_manager.py  test_cache_memory.py  test_cache_system.py  test_consensus_consensus_engine.py  test_consensus_hybrid_consensus.py  (+81 more)
(+221 files in other folders)
